--- a/src/html/project.html
+++ b/src/html/project.html
@@ -9,7 +9,7 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "project"}'></include>
         </header>
 
-        <main class="flex flex-col items-center justify-start font-crimson-text tracking-tight text-lg font-semibold">
+        <main class="flex flex-col items-center justify-start font-crimson-text text-lg font-semibold tracking-tight mb-24">
             <!-- 1. -->
             <div class="mb-6 flex items-center justify-between">
                 <div class="w-1/2 pr-8 text-justify">
@@ -17,21 +17,24 @@
                     wird durch die Kontextualisierung von Fotos, Archivmaterial und Portraits - verknüpft mit Interviews - dargestellt.
                 </div>
                 <div class="w-1/2 pl-8">
-                    <div class="relative aspect-3/2 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
-                        <a href="virtual-exhibits/ve2.html" class="group">
-                            <img
-                                src="/public/images/Zaninelli_Jakobs_BROTHERLAND_The_Truth_Lies_in_Rostock__02.jpg"
-                                class="cursor-ve absolute h-full w-full object-cover"
-                            />
-                            <div class="absolute bottom-0 w-full translate-y-full text-right text-xs">
-                                Filmstill aus <span class="italic">The Truth Lies in Rostock</span>/Spectacle
-                            </div>
-                        </a>
+                    <div class="relative aspect-3/2 w-full">
+                        <div class="h-full grayscale transition-[filter] ease-linear hover:grayscale-0">
+                            <a href="virtual-exhibits/ve2.html" class="group">
+                                <img
+                                    src="/public/images/Zaninelli_Jakobs_BROTHERLAND_The_Truth_Lies_in_Rostock__02.jpg"
+                                    class="cursor-ve absolute h-full w-full object-cover"
+                                />
+                            </a>
+                        </div>
+
+                        <div class="absolute bottom-0 w-full translate-y-full text-right text-xs">
+                            Filmstill aus <span class="italic">The Truth Lies in Rostock</span>/Spectacle
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- 2. -->
-            <div class="mb-20 flex items-center justify-between">
+            <div class="mb-6 flex items-center justify-between">
                 <div class="w-4/5 pr-8">
                     <!-- Image placeholders: Zaninelli_Jakobs_BROTHERLAND_04.jpg -->
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
@@ -92,15 +95,12 @@
                 </div>
             </div>
             <!-- 4. -->
-            <div class="mb-6 flex items-center justify-between">
+            <div class="my-8 flex items-center justify-between">
                 <div class="w-4/5 pr-8">
-                    <div class="relative aspect-3/2 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
+                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
                         <!-- Image placeholders: -->
                         <a href="virtual-exhibits/ve2.html" class="group">
-                            <img
-                                src="/public/images/Zaninelli_Jakobs_BROTHERLAND_035.jpg"
-                                class="cursor-ve w-full"
-                            />                            
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_035.jpg" class="cursor-ve w-full" />
                         </a>
                     </div>
                 </div>
