--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -13,17 +13,17 @@
             <!-- Hover links -->
             <div class="absolute h-full w-full pointer-events-none">
                 <a
-                    class="cursor-ve absolute left-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4 pointer-events-auto"
+                    class="cursor-ve-prev absolute left-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4 pointer-events-auto"
                     href="./ve3.html"
                 ></a>
 
                 <a
-                    class="cursor-ve absolute right-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4 pointer-events-auto"
+                    class="cursor-ve-next absolute right-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4 pointer-events-auto"
                     href="./ve2.html"
                 ></a>
             </div>
 
-            <main class="flex flex-col font-crimson-text tracking-tight text-xl font-bold">
+            <main class="mb-24 flex flex-col font-crimson-text tracking-tight text-xl font-bold">
                 <div class="relative flex h-fit w-full">
                     <div class="flex h-full w-2/5 justify-start">
                         <!-- Stahlturm -->
