--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "./", "pageTitle": "Brotherland - Martina Zaninelli"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "./", "pageTitle": "Brotherland"}' />
     </head>
 
-    <body class="bg-white text-gray-700">
+    <body class="bg-white text-black">
         <div class="flex items-center justify-start">
-            <div class="relative aspect-2/3 h-screen min-w-xl">
+            <div class="md:w-20"></div>
+            <div class="min-w-xl relative aspect-2/3 h-screen">
                 <img src="../public/images/Zaninelli_Jakobs_BROTHERLAND_01.jpg" class="h-full w-full object-cover" />
             </div>
-            <div class="pl-10 flex flex-col justify-between">
-                <div class="font-roboto tracking-tight text-2xl justify-left uppercase text-gray-300 md:text-8xl leading-2 leading whitespace-pre">Brother
-land</div>
-                <nav class="mt-12 min-w-fit font-crimson-text text-2xl font-medium uppercase">
+            <div class="flex h-screen flex-col justify-start pl-10">
+                <div class="h-16"></div>
+
+                <div
+                    class="font-roboto text-2xl font-medium uppercase text-gray-800 md:text-8xl"
+                >
+                    <div>Brother</div>
+                    <div>land</div>
+                </div>
+
+                <div class="h-12"></div>
+
+                <nav class="min-w-fit font-crimson-text text-3xl font-medium">
                     <a href="./html/project.html" alt="Project">
-                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Projekt</div>
+                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Projekt</div>
                     </a>
                     <a href="./html/interviews/intrvw_ajm01.html" alt="Interviews">
-                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Interviews</div>
+                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Interviews</div>
                     </a>
                     <a href="./html/book.html" alt="Book">
-                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Buch</div>
+                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Buch</div>
                     </a>
                     <a href="./html/exhibits.html" alt="Exhibits">
-                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Ausstellungen</div>
+                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Ausstellungen</div>
                     </a>
                     <a href="./html/about.html" alt="About">
-                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Über Uns</div>
+                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Über uns</div>
                     </a>
                 </nav>
             </div>
